fix: drag drop with overflow

--- a/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
+++ b/packages/ibm-products-styles/src/components/DataSpreadsheet/_data-spreadsheet.scss
@@ -267,10 +267,6 @@ $header-cell-background: $layer-accent-01;
     width: $spacing-01;
     background-color: $background-brand;
   }
-  .#{$block-class}__th--active-header,
-  .#{$block-class}__td-th--active-header.#{$block-class}__td {
-    background-color: $background-selected-hover;
-  }
   .#{$block-class}__th--selected-header,
   .#{$block-class}__td-th--selected-header.#{$block-class}__td {
     background-color: $background-inverse;
